--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@ title: JuliaOpt - Home of the JuliaOpt Project
   <h2>What is JuliaOpt?</h2>
   <p><a href="http://juliaopt.org">JuliaOpt</a> is an umbrella group for Julia-based optimization-related projects. All our code is available from our <a href="http://github.com/JuliaOpt/">GitHub</a> page, as well as through the Julia <a href="http://docs.julialang.org/en/latest/manual/packages/">package manager</a>. The current JuliaOpt projects include:</p>
   <ul>
-    <li><strong>JuMP</strong> - An algebraic modelling language for optimization problems embedded in Julia that generates models as quick as commercial modelling tools. (<a href="https://jump.readthedocs.org/en/latest/jump.html">Documentation</a>, <a href="https://github.com/IainNZ/JuMP.jl">GitHub</a>)</li>
+    <li><strong>JuMP</strong> - An algebraic modelling language for optimization problems embedded in Julia that generates models as quick as commercial modelling tools. (<a href="https://jump.readthedocs.org/en/latest/jump.html">Documentation</a>, <a href="https://github.com/JuliaOpt/JuMP.jl">GitHub</a>)</li>
+    <li><strong>MathProgBase</strong> - A standardized interface implemented by solvers that allows code to remain solver-agnostic. Used by JuMP. (<a href="https://github.com/mlubin/MathProgBase.jl">GitHub</a>)</li>
   </ul>
 
   We also have connections to many open-source and commercial solvers:
@@ -22,7 +23,7 @@ title: JuliaOpt - Home of the JuliaOpt Project
       <tr>
         <th>Solver</th>
         <th>Julia</th>
-        <th>Status</th>
+        <!--<th>Status</th>-->
         <th>LP</th>
         <th>MILP</th>
         <th>SOCP</th>
@@ -36,7 +37,7 @@ title: JuliaOpt - Home of the JuliaOpt Project
 
     <tfoot> <!-- Must appear before tbody, see W3.org -->
       <tr style="text-align: left">
-        <td colspan="11">
+        <td colspan="10">
           <small>(1): Convex nonlinear problems only.</small>
         </td>
       </tr>
@@ -46,7 +47,7 @@ title: JuliaOpt - Home of the JuliaOpt Project
       <tr>
         <th><a href="https://www.coin-or.org">COIN</a> <a href="https://projects.coin-or.org/Cbc">Cbc</a>/<a href="https://projects.coin-or.org/Clp">Clp</a></th>
         <td><a href="https://github.com/mlubin/Cbc.jl">Cbc.jl</a>/<a href="https://github.com/mlubin/Clp.jl">Clp.jl</a></td>
-        <td>100%</td>
+        <!--<td>100%</td>-->
         <td>&#10004;</td> <!-- LP -->
         <td>&#10004;</td> <!-- MILP -->
         <td></td> <!-- SOCP -->
@@ -59,8 +60,8 @@ title: JuliaOpt - Home of the JuliaOpt Project
 
       <tr>
         <th><a href="http://www.gurobi.com">Gurobi</a></th>
-        <td><a href="https://github.com/mlubin/Gurobi.jl">Gurobi.jl</a></td>
-        <td>75%</td>
+        <td><a href="https://github.com/JuliaOpt/Gurobi.jl">Gurobi.jl</a></td>
+        <!--<td>75%</td>-->
         <td>&#10004;</td> <!-- LP -->
         <td>&#10004;</td> <!-- MILP -->
         <td>&#10004;</td> <!-- SOCP -->
@@ -71,19 +72,19 @@ title: JuliaOpt - Home of the JuliaOpt Project
         <td>IP Callbacks</td> <!-- Other -->
       </tr>
 
-      <tr>
+      <!--<tr>
         <th><a href="http://www.mosek.com">Mosek</a></th>
         <td><a href="https://github.com/IainNZ/Mosek.jl">Mosek.jl</a></td>
         <td>10%</td>
-        <td>&#10004;</td> <!-- LP -->
-        <td>&#10004;</td> <!-- MILP -->
-        <td>&#10004;</td> <!-- SOCP -->
-        <td>&#10004;</td> <!-- MISOCP -->
-        <td>&#10004;</td> <!-- SDP -->
-        <td>&#10004;<small>1</small></td> <!-- NLP -->
-        <td></td> <!-- MINLP -->
-        <td></td> <!-- Other -->
-      </tr>
+        <td>&#10004;</td> <!-- LP --
+        <td>&#10004;</td> <!-- MILP --
+        <td>&#10004;</td> <!-- SOCP --
+        <td>&#10004;</td> <!-- MISOCP --
+        <td>&#10004;</td> <!-- SDP --
+        <td>&#10004;<small>1</small></td> <!-- NLP --
+        <td></td> <!-- MINLP --
+        <td></td> <!-- Other --
+      </tr>-->
 
     </tbody>
 
