--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: JuliaOpt - Home of the JuliaOpt Project
 ---
 
 <div id="home">
-  <img src="/images/logo300.png" style="display: block; margin-left: auto; margin-right: auto; margin-bottom: 10px">
+  <img src="/images/logo300.png" style="display: block; margin-left: auto; margin-right: auto; margin-bottom: 20px">
 
   <h2>What is Julia?</h2>
   <p><a href="http://julialang.org">Julia</a> is a "high-level, high-performance dynamic programming language for technical computing". It is free (open-source) and cross-platform. The familiar syntax, the ease of connecting with external libraries, the speed, and advanced language features like metaprogramming offer interesting possibilities for optimization software.</p>
@@ -12,12 +12,13 @@ title: JuliaOpt - Home of the JuliaOpt Project
   <h2>What is JuliaOpt?</h2>
   <p><a href="http://juliaopt.org">JuliaOpt</a> is an umbrella group for Julia-based optimization-related projects. All our code is available from our <a href="http://github.com/JuliaOpt/">GitHub</a> page, as well as through the Julia <a href="http://docs.julialang.org/en/latest/manual/packages/">package manager</a>. The current JuliaOpt projects include:</p>
   <ul>
-    <li><strong>JuMP</strong> - An algebraic modelling language for optimization problems embedded in Julia that generates models as quick as commercial modelling tools. (<a href="https://jump.readthedocs.org/en/latest/jump.html">Documentation</a>, <a href="https://github.com/JuliaOpt/JuMP.jl">GitHub</a>)</li>
+    <li><strong>JuMP</strong> - An algebraic modeling language for optimization problems embedded in Julia that generates models as quick as commercial modeling tools. (<a href="https://jump.readthedocs.org/en/latest/jump.html">Documentation</a>, <a href="https://github.com/JuliaOpt/JuMP.jl">GitHub</a>)</li>
     <li><strong>MathProgBase</strong> - A standardized interface implemented by solvers that allows code to remain solver-agnostic. Used by JuMP. (<a href="https://github.com/mlubin/MathProgBase.jl">GitHub</a>)</li>
   </ul>
 
-  We also have connections to many open-source and commercial solvers:
-  <table style="text-align: center;" width="100%">
+  <p>We also have connections to many open-source and commercial solvers:</p>
+
+  <table style="text-align: center; margin-bottom: 20px" width="100%">
     <caption>Julia Solver Interfaces</caption>
     <thead>
       <tr>
@@ -90,4 +91,9 @@ title: JuliaOpt - Home of the JuliaOpt Project
 
   </table>
 
+  <h2>Guidelines for JuliaOpt Packages</h2>
+  {% capture guidelines %}
+  {% include guidelines.md %}
+  {% endcapture %}
+  {{ guidelines | markdownify }}
 </div>
