--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@ title: JuliaOpt - Home of the JuliaOpt Project
   <p><a href="http://juliaopt.org">JuliaOpt</a> is an umbrella group for Julia-based optimization-related projects. All our code is available from our <a href="http://github.com/JuliaOpt/">GitHub</a> page, as well as through the Julia <a href="http://docs.julialang.org/en/latest/manual/packages/">package manager</a>. The current JuliaOpt projects include:</p>
   <ul>
     <li><strong>JuMP</strong> - An algebraic modeling language for optimization problems embedded in Julia that generates models as quick as commercial modeling tools. (<a href="https://jump.readthedocs.org/en/latest/jump.html">Documentation</a>, <a href="https://github.com/JuliaOpt/JuMP.jl">GitHub</a>)</li>
-    <li><strong>MathProgBase</strong> - A standardized interface implemented by solvers that allows code to remain solver-agnostic. Used by JuMP. (<a href="https://github.com/mlubin/MathProgBase.jl">GitHub</a>)</li>
+    <li><strong>Optim</strong> - Implementations of basic optimization algorithms in pure Julia for unconstrained or simply-constrained problems. (<a href="https://github.com/JuliaOpt/Optim.jl/blob/master/README.md">Documentation</a>, <a href="https://github.com/JuliaOpt/Optim.jl">GitHub</a>)</li>
+    <li><strong>MathProgBase</strong> - A standardized interface implemented by solvers that allows code to remain solver-agnostic. Used by JuMP. (<a href="http://mathprogbasejl.readthedocs.org/en/latest/mathprogbase.html">Documentation</a>, <a href="https://github.com/JuliaOpt/MathProgBase.jl">GitHub</a>)</li>
   </ul>
 
   <p>We also have connections to many open-source and commercial solvers:</p>
@@ -41,14 +42,17 @@ title: JuliaOpt - Home of the JuliaOpt Project
           <small>
 	  <strong>Key:</strong>
 	  <ul style="list-style: none; margin-top: 5px">
-            <li>LP=Linear Programming, MILP=Mixed Integer LP</li>
-	    <li>QCQP=Quadratically constrained quadratic programs (incl. SOCP), MIQCQP=Mixed Integer QCQP</li>
-	    <li>SDP=Semidefinite Programming</li>
-	    <li>NLP=Nonlinear Programming, MINLP=Mixed Integer NLP</li>
+            <li>LP = <a href="http://en.wikipedia.org/wiki/Linear_programming">Linear Programming</a></li>
+            <li>MILP = <a href="http://en.wikipedia.org/wiki/Integer_programming">Mixed Integer LP</a></li>
+            <li>QCQP = <a href="http://en.wikipedia.org/wiki/Second_order_cone_programming">Quadratically constrained quadratic programs (incl. SOCP)</a></li>
+            <li>MIQCQP = Mixed Integer QCQP</li>
+            <li>SDP = <a href="http://en.wikipedia.org/wiki/Semidefinite_programming">Semidefinite Programming</a></li>
+            <li>NLP = (constrained) <a href="http://en.wikipedia.org/wiki/Nonlinear_programming">Nonlinear Programming</a></li>
+            <li>MINLP = Mixed Integer NLP</li>
           </ul>
           <strong>Notes:</strong>
           <ol style="">
-	    <li>These must be specified like any other non-linear program, e.g. gradient and sparse Jacobian.</li>
+	    <li>These must be specified like any other non-linear program, i.e. by providing gradient information.</li>
           </ol>
 	  </small>
         </td>
