--- a/index.html
+++ b/index.html
@@ -1,10 +1,58 @@
----
-layout: default
-title: JuliaOpt - Home of the JuliaOpt Project
----
+<!DOCTYPE html>
+<!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
+<!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
+<!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
+<!--[if (gte IE 9)|!(IE)]><!--><html lang="en"> <!--<![endif]-->
+<head>
+
+  <!-- Basic Page Needs -->
+  <meta charset="utf-8">
+  <title>JuliaOpt</title>
+  <meta name="description" content="Home of the JuliaOpt project.">
+  <meta name="author" content="Iain Dunning">
+
+  <!-- Mobile Specific Metas -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
+  <!-- CSS -->
+  <link rel="stylesheet" href="css/base.css">
+  <link rel="stylesheet" href="css/skeleton.css">
+  <link rel="stylesheet" href="css/layout.css">
+
+  <!--[if lt IE 9]>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->
+
+  <!-- Google Analytics -->        
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-44252521-2', 'juliaopt.org');
+  ga('send', 'pageview');
+
+  </script>
+</head>
+<body>
+  <div class="container">
+    <!-- Header -->
+    <div class="sixteen columns">
+      <h1 class="remove-bottom" style="margin-top: 40px; color: #ad3f39;">JuliaOpt</h1>
+      <h5>
+        Optimization-related projects in <a href="http://julialang.org">Julia</a>.
+        <a href="http://github.com/JuliaOpt/">JuliaOpt on GitHub.</a>
+      </h5>
+      <hr />
+    </div>
+
+    <div class="sixteen columns">
+
+<!--//// BEGIN CONTENT ////-->
 
 <div id="home">
-  <img src="/images/logo300.png" style="display: block; margin-left: auto; margin-right: auto; margin-bottom: 20px" alt="The three circles represent (clockwise): linear, integer, and nonlinear programming.">
+  <img src="images/logo300.png" style="display: block; margin-left: auto; margin-right: auto; margin-bottom: 20px" alt="The three circles represent (clockwise): linear, integer, and nonlinear programming.">
 
   <h2>What is Julia?</h2>
   <p><a href="http://julialang.org">Julia</a> is a "high-level, high-performance dynamic programming language for technical computing". It is free (open-source) and cross-platform. The familiar syntax, the ease of connecting with external libraries, the speed, and advanced language features like metaprogramming offer interesting possibilities for optimization software.</p>
@@ -12,7 +60,7 @@ title: JuliaOpt - Home of the JuliaOpt Project
   <h2>What is JuliaOpt?</h2>
   <p><a href="http://juliaopt.org">JuliaOpt</a> is an umbrella group for Julia-based optimization-related projects. All our code is available from our <a href="http://github.com/JuliaOpt/">GitHub</a> page, as well as through the Julia <a href="http://docs.julialang.org/en/latest/manual/packages/">package manager</a>. The current JuliaOpt projects are:</p>
   <ul>
-    <li><strong>JuMP</strong> - An algebraic modeling language for optimization problems embedded in Julia that generates models as quick as commercial modeling tools. (<a href="https://jump.readthedocs.org/en/latest/jump.html">Documentation</a>, <a href="https://github.com/JuliaOpt/JuMP.jl">GitHub</a>)</li>
+    <li><strong>JuMP</strong> - An algebraic modeling language for optimization problems embedded in Julia. Generates models as quick as commercial modeling tools and supports advanced features like solver callbacks. (<a href="https://jump.readthedocs.org/en/latest/jump.html">Documentation</a>, <a href="https://github.com/JuliaOpt/JuMP.jl">GitHub</a>)</li>
     <li><strong>Optim.jl</strong> - Implementations of standard optimization algorithms in pure Julia for unconstrained or box constrained problems. (<a href="https://github.com/JuliaOpt/Optim.jl/blob/master/README.md">Documentation</a>, <a href="https://github.com/JuliaOpt/Optim.jl">GitHub</a>)</li>
     <li><strong>MathProgBase</strong> - A standardized interface implemented by solvers that allows code to remain solver-agnostic. Used by JuMP. (<a href="http://mathprogbasejl.readthedocs.org/en/latest/mathprogbase.html">Documentation</a>, <a href="https://github.com/JuliaOpt/MathProgBase.jl">GitHub</a>)</li>
   </ul>
@@ -88,7 +136,7 @@ title: JuliaOpt - Home of the JuliaOpt Project
         <td></td> <!-- SDP -->
         <td></td> <!-- NLP -->
         <td></td> <!-- MINLP -->
-        <td></td> <!-- Other -->
+        <td>IP Callbacks</td> <!-- Other -->
       </tr>
 
       <tr>
@@ -136,8 +184,36 @@ title: JuliaOpt - Home of the JuliaOpt Project
   </table>
 
   <h2>Guidelines for JuliaOpt Packages</h2>
-  {% capture guidelines %}
-  {% include guidelines.md %}
-  {% endcapture %}
-  {{ guidelines | markdownify }}
+  
+<p>JuliaOpt aims to be a collection of high-quality optimization-related
+packages for users of Julia. To be included in JuliaOpt, we request
+that packages follow the following simple guidelines:</p>
+
+<ul>
+<li> Packages should have good documentation. </li>
+<li> Packages must have a basic suite of tests in a ``test`` subdirectory, ideally controlled by a master file ``test/runtests.jl``. Unit testing and the use of the <a href="https://travis-ci.org/">Travis</a> continuous integration service is strongly encouraged. </li>
+<li> (Recent) Linux, OS X, and Windows platforms must be fully supported. </li>
+<li> For packages with freely distributable binary dependencies, these
+should be installed automatically via <a href="https://github.com/loladiro/BinDeps.jl">BinDeps</a>.  Binaries should be available for both OS X and Windows users. (See the Julia <a href="https://github.com/staticfloat/Homebrew.jl">Homebrew</a> package for easy binary packaging on OS X. For Windows, many upstream libraries provide a pre-compiled DLL file.) </li>
+</ul>
+
+<p>Current JuliaOpt packages can be used as examples of how to implement
+these guidelines (please file an issue if you believe they don't!). We
+are happy to provide assistance to package maintainers, especially with
+testing on various platforms and dealing with binary dependencies.</p>
+
+
 </div>
+
+
+<!-- //// END CONTENT //// -->
+
+    </div>
+    <div class="sixteen columns">
+      <hr />
+      <small>This website was made with <a href="http://jekyllrb.com">Jekyll</a> and <a href="http://www.getskeleton.com">Skeleton</a>. Something wrong? Submit <a href="https://github.com/JuliaOpt/juliaopt.org/issues">issue</a>. Contact: <a href="http://iaindunning.com">Iain Dunning</a> (idunning AT mit DOT edu, <a href="https://www.twitter.com/iaindunning">@iaindunning</a>), <a href="http://www.mit.edu/~mlubin/">Miles Lubin</a> (mlubin AT mit DOT edu)</small>
+    </div>
+  </div><!-- container -->
+
+</body>
+</html>
