--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
         <th>JuMP</th>
         <th>LP</th>
         <th>MILP</th>
-        <th>QCQP</th>
-        <th>MIQCQP</th>
+        <th>SOCP</th>
+        <th>MISOCP</th>
         <th>SDP</th>
         <th>NLP</th>
         <th>MINLP</th>
@@ -94,8 +94,8 @@
             <li style="margin: 0.1em 0;">JuMP = Can call this solver via <a href="https://github.com/JuliaOpt/JuMP.jl">JuMP</a></li>
             <li style="margin: 0.1em 0;">LP = <a href="http://en.wikipedia.org/wiki/Linear_programming">Linear Programming</a></li>
             <li style="margin: 0.1em 0;">MILP = <a href="http://en.wikipedia.org/wiki/Integer_programming">Mixed Integer LP</a></li>
-            <li style="margin: 0.1em 0;">QCQP = <a href="http://en.wikipedia.org/wiki/Second_order_cone_programming">Quadratically constrained quadratic programs</a></li>
-            <li style="margin: 0.1em 0;">MIQCQP = Mixed Integer QCQP</li>
+            <li style="margin: 0.1em 0;">SOCP = <a href="http://en.wikipedia.org/wiki/Second_order_cone_programming">Second-order cone programming</a> (includes QP, QCQP)</li>
+            <li style="margin: 0.1em 0;">MISOCP = Mixed Integer SOCP</li>
             <li style="margin: 0.1em 0;">SDP = <a href="http://en.wikipedia.org/wiki/Semidefinite_programming">Semidefinite Programming</a></li>
             <li style="margin: 0.1em 0;">NLP = (constrained) <a href="http://en.wikipedia.org/wiki/Nonlinear_programming">Nonlinear Programming</a></li>
             <li style="margin: 0.1em 0;">MINLP = Mixed Integer NLP</li>
@@ -104,6 +104,7 @@
           <ol style="">
             <li>Only for LPs</li>
             <li>These must be specified like any other non-linear program, i.e. by providing gradient information.</li>
+            <li>Not exposed through JuMP yet - use interface directly.</li>
           </ol>
 	  </small>
         </td>
@@ -166,6 +167,20 @@
         <td></td> <!-- MINLP -->
         <td></td> <!-- Other -->
       </tr>
+      
+      <tr>
+        <th><a href="https://projects.coin-or.org/Ipopt">Mosek</a></th>
+        <td><a href="https://github.com/JuliaOpt/Ipopt.jl">Mosek.jl</a></td>
+        <td>&#10004;</td> <!-- JuMP -->
+        <td>&#10004;</td> <!-- LP -->
+        <td>&#10004;</td> <!-- MILP -->
+        <td>&#10004;</td> <!-- QCQP -->
+        <td>&#10004;</td> <!-- MIQCQP -->
+        <td>&#10004;<small>3</small></td> <!-- SDP -->
+        <td>&#10004;<small>3</small></td> <!-- NLP -->
+        <td>&#10004;<small>3</small></td> <!-- MINLP -->
+        <td></td> <!-- Other -->
+      </tr>
 
       <tr>
         <th><a href="http://ab-initio.mit.edu/nlopt">NLopt</a></th>
@@ -211,7 +226,7 @@ testing on various platforms and dealing with binary dependencies.</p>
     </div>
     <div class="sixteen columns">
       <hr />
-      <small>This website was made with <a href="http://jekyllrb.com">Jekyll</a> and <a href="http://www.getskeleton.com">Skeleton</a>. Something wrong? Submit <a href="https://github.com/JuliaOpt/juliaopt.org/issues">issue</a>. Contact: <a href="http://iaindunning.com">Iain Dunning</a> (idunning AT mit DOT edu, <a href="https://www.twitter.com/iaindunning">@iaindunning</a>), <a href="http://www.mit.edu/~mlubin/">Miles Lubin</a> (mlubin AT mit DOT edu)</small>
+      <small>This website was made with <a href="http://www.getskeleton.com">Skeleton</a>. Something wrong? Submit <a href="https://github.com/JuliaOpt/juliaopt.org/issues">issue</a>. Contact: <a href="http://iaindunning.com">Iain Dunning</a> (idunning AT mit DOT edu, <a href="https://www.twitter.com/iaindunning">@iaindunning</a>), <a href="http://www.mit.edu/~mlubin/">Miles Lubin</a> (mlubin AT mit DOT edu)</small>
     </div>
   </div><!-- container -->
 
