Fix links for Mosek

--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
       </tr>
       
       <tr>
-        <th><a href="https://projects.coin-or.org/Ipopt">Mosek</a></th>
-        <td><a href="https://github.com/JuliaOpt/Ipopt.jl">Mosek.jl</a></td>
+        <th><a href="http://www.mosek.com/">Mosek</a></th>
+        <td><a href="https://github.com/JuliaOpt/Mosek.jl">Mosek.jl</a></td>
         <td>&#10004;</td> <!-- JuMP -->
         <td>&#10004;</td> <!-- LP -->
         <td>&#10004;</td> <!-- MILP -->
