--- a/index.html
+++ b/index.html
@@ -102,8 +102,6 @@
           </ul>
           <strong>Notes:</strong>
           <ol style="">
-            <li>Only for LPs</li>
-            <li>These must be specified like any other non-linear program, i.e. by providing gradient information.</li>
             <li>Not exposed through JuMP yet - use interface directly.</li>
           </ol>
 	  </small>
@@ -157,13 +155,13 @@
       <tr>
         <th><a href="https://projects.coin-or.org/Ipopt">Ipopt</a></th>
         <td><a href="https://github.com/JuliaOpt/Ipopt.jl">Ipopt.jl</a></td>
-        <td>&#10004;<small>1</small></td> <!-- JuMP -->
-        <td>&#10004;<small>2</small></td> <!-- LP -->
+        <td></td> <!-- JuMP -->
+        <td>&#10004;<small>1</small></td> <!-- LP -->
         <td></td> <!-- MILP -->
-        <td>&#10004;<small>2</small></td> <!-- QCQP -->
+        <td>&#10004;<small>1</small></td> <!-- QCQP -->
         <td></td> <!-- MIQCQP -->
         <td></td> <!-- SDP -->
-        <td>&#10004;</td> <!-- NLP -->
+        <td>&#10004;<small>1</small></td> <!-- NLP -->
         <td></td> <!-- MINLP -->
         <td></td> <!-- Other -->
       </tr>
@@ -176,9 +174,9 @@
         <td>&#10004;</td> <!-- MILP -->
         <td>&#10004;</td> <!-- QCQP -->
         <td>&#10004;</td> <!-- MIQCQP -->
-        <td>&#10004;<small>3</small></td> <!-- SDP -->
-        <td>&#10004;<small>3</small></td> <!-- NLP -->
-        <td>&#10004;<small>3</small></td> <!-- MINLP -->
+        <td>&#10004;<small>1</small></td> <!-- SDP -->
+        <td>&#10004;<small>1</small></td> <!-- NLP -->
+        <td>&#10004;<small>1</small></td> <!-- MINLP -->
         <td></td> <!-- Other -->
       </tr>
 
@@ -186,12 +184,12 @@
         <th><a href="http://ab-initio.mit.edu/nlopt">NLopt</a></th>
         <td><a href="https://github.com/JuliaOpt/NLopt.jl">NLopt.jl</a></td>
         <td></td> <!-- JuMP -->
-        <td>&#10004;<small>2</small></td> <!-- LP -->
+        <td>&#10004;<small>1</small></td> <!-- LP -->
         <td></td> <!-- MILP -->
-        <td>&#10004;<small>2</small></td> <!-- QCQP -->
+        <td>&#10004;<small>1</small></td> <!-- QCQP -->
         <td></td> <!-- MIQCQP -->
         <td></td> <!-- SDP -->
-        <td>&#10004;</td> <!-- NLP -->
+        <td>&#10004;<small>1</small></td> <!-- NLP -->
         <td></td> <!-- MINLP -->
         <td></td> <!-- Other -->
       </tr>
