--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <h2>What is JuliaOpt?</h2>
   <p><a href="http://juliaopt.org">JuliaOpt</a> is an umbrella group for Julia-based optimization-related projects. All our code is available from our <a href="http://github.com/JuliaOpt/">GitHub</a> page, as well as through the Julia <a href="http://docs.julialang.org/en/latest/manual/packages/">package manager</a>. We have a mailing list, <a href="https://groups.google.com/forum/#!forum/julia-opt">julia-opt</a>, on Google Groups. The current JuliaOpt projects are:</p>
   <ul>
-    <li><strong>JuMP</strong> - An algebraic modeling language for optimization problems embedded in Julia. Generates models as quick as commercial modeling tools and supports advanced features like solver callbacks. (<a href="https://jump.readthedocs.org/en/latest/jump.html">Documentation</a>, <a href="https://github.com/JuliaOpt/JuMP.jl">GitHub</a>)</li>
+    <li><strong>JuMP</strong> - An algebraic modeling language for linear- and quadratically-constrained optimization problems embedded in Julia. Generates models as quick as commercial modeling tools and supports advanced features like solver callbacks. As of version 0.5 it also supports general nonlinear models with automatic differentiation which can be solved with <a href="http://github.com/JuliaOpt/Ipopt.jl">Ipopt</a>. (<a href="https://jump.readthedocs.org/en/latest/jump.html">Documentation</a>, <a href="https://github.com/JuliaOpt/JuMP.jl">GitHub</a>)</li>
     <li><strong>Optim.jl</strong> - Implementations of standard optimization algorithms in pure Julia for unconstrained or box constrained problems. (<a href="https://github.com/JuliaOpt/Optim.jl/blob/master/README.md">Documentation</a>, <a href="https://github.com/JuliaOpt/Optim.jl">GitHub</a>)</li>
     <li><strong>MathProgBase</strong> - A standardized interface implemented by solvers that allows code to remain solver-agnostic. Used by JuMP. (<a href="http://mathprogbasejl.readthedocs.org/en/latest/mathprogbase.html">Documentation</a>, <a href="https://github.com/JuliaOpt/MathProgBase.jl">GitHub</a>)</li>
   </ul>
@@ -113,9 +113,9 @@
       <tr>
         <th><a href="https://www.coin-or.org">COIN</a> <a href="https://projects.coin-or.org/Cbc">Cbc</a>/<a href="https://projects.coin-or.org/Clp">Clp</a></th>
         <td><a href="https://github.com/JuliaOpt/Cbc.jl">Cbc.jl</a>/<a href="https://github.com/JuliaOpt/Clp.jl">Clp.jl</a></td>
+        <td>&#10004;</td> <!-- JuMP -->
         <td>&#10004;</td> <!-- LP -->
         <td>&#10004;</td> <!-- MILP -->
-        <td>&#10004;</td> <!-- JuMP -->
         <td></td> <!-- QCQP -->
         <td></td> <!-- MIQCQP -->
         <td></td> <!-- SDP -->
@@ -127,9 +127,9 @@
       <tr>
         <th><a href="http://www.gnu.org/software/glpk/">GNU GLPK</a></th>
         <td><a href="https://github.com/JuliaOpt/GLPK.jl">GLPK.jl</a></td>
+        <td>&#10004;</td> <!-- JuMP -->
         <td>&#10004;</td> <!-- LP -->
         <td>&#10004;</td> <!-- MILP -->
-        <td>&#10004;</td> <!-- JuMP -->
         <td></td> <!-- QCQP -->
         <td></td> <!-- MIQCQP -->
         <td></td> <!-- SDP -->
@@ -141,9 +141,9 @@
       <tr>
         <th><a href="http://www.gurobi.com">Gurobi</a></th>
         <td><a href="https://github.com/JuliaOpt/Gurobi.jl">Gurobi.jl</a></td>
+        <td>&#10004;</td> <!-- JuMP -->
         <td>&#10004;</td> <!-- LP -->
         <td>&#10004;</td> <!-- MILP -->
-        <td>&#10004;</td> <!-- JuMP -->
         <td>&#10004;</td> <!-- QCQP -->
         <td>&#10004;</td> <!-- MIQCQP -->
         <td></td> <!-- SDP -->
@@ -155,13 +155,13 @@
       <tr>
         <th><a href="https://projects.coin-or.org/Ipopt">Ipopt</a></th>
         <td><a href="https://github.com/JuliaOpt/Ipopt.jl">Ipopt.jl</a></td>
-        <td></td> <!-- JuMP -->
-        <td>&#10004;<small>1</small></td> <!-- LP -->
+        <td>&#10004;</td> <!-- JuMP -->
+        <td>&#10004;</td> <!-- LP -->
         <td></td> <!-- MILP -->
-        <td>&#10004;<small>1</small></td> <!-- QCQP -->
+        <td>&#10004;</td> <!-- QCQP -->
         <td></td> <!-- MIQCQP -->
         <td></td> <!-- SDP -->
-        <td>&#10004;<small>1</small></td> <!-- NLP -->
+        <td>&#10004;</td> <!-- NLP -->
         <td></td> <!-- MINLP -->
         <td></td> <!-- Other -->
       </tr>
