--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <h2>What is JuliaOpt?</h2>
   <p><a href="http://juliaopt.org">JuliaOpt</a> is an umbrella group for Julia-based optimization-related projects. All our code is available from our <a href="http://github.com/JuliaOpt/">GitHub</a> page, as well as through the Julia <a href="http://docs.julialang.org/en/latest/manual/packages/">package manager</a>. We have a mailing list, <a href="https://groups.google.com/forum/#!forum/julia-opt">julia-opt</a>, on Google Groups. The current JuliaOpt projects are:</p>
   <ul>
-    <li><strong>JuMP</strong> - An algebraic modeling language for linear- and quadratically-constrained optimization problems embedded in Julia. Generates models as quick as commercial modeling tools and supports advanced features like solver callbacks. As of version 0.5 it also supports general nonlinear models with automatic differentiation which can be solved with <a href="http://github.com/JuliaOpt/Ipopt.jl">Ipopt</a>. (<a href="https://jump.readthedocs.org/en/latest/jump.html">Documentation</a>, <a href="https://github.com/JuliaOpt/JuMP.jl">GitHub</a>)</li>
+    <li><strong>JuMP</strong> - An algebraic modeling language for linear- and quadratically-constrained optimization problems embedded in Julia. Generates models as quick as commercial modeling tools and supports advanced features like solver callbacks. As of version 0.5 it also supports solving optimization problems with <a href="http://github.com/JuliaOpt/Ipopt.jl">Ipopt</a>. (<a href="https://jump.readthedocs.org/en/latest/">Documentation</a>, <a href="https://github.com/JuliaOpt/JuMP.jl">GitHub</a>)</li>
     <li><strong>Optim.jl</strong> - Implementations of standard optimization algorithms in pure Julia for unconstrained or box constrained problems. (<a href="https://github.com/JuliaOpt/Optim.jl/blob/master/README.md">Documentation</a>, <a href="https://github.com/JuliaOpt/Optim.jl">GitHub</a>)</li>
     <li><strong>MathProgBase</strong> - A standardized interface implemented by solvers that allows code to remain solver-agnostic. Used by JuMP. (<a href="http://mathprogbasejl.readthedocs.org/en/latest/mathprogbase.html">Documentation</a>, <a href="https://github.com/JuliaOpt/MathProgBase.jl">GitHub</a>)</li>
   </ul>
@@ -204,7 +204,7 @@ that packages follow the following simple guidelines:</p>
 
 <ul>
 <li> Packages should have good documentation. </li>
-<li> Packages must have a basic suite of tests in a ``test`` subdirectory, ideally controlled by a master file ``test/runtests.jl``. Unit testing and the use of the <a href="https://travis-ci.org/">Travis</a> continuous integration service is strongly encouraged. </li>
+<li> Packages must have a basic suite of tests in a <pre>test</pre> subdirectory, ideally controlled by a master file <pre>test/runtests.jl</pre>. Unit testing and the use of the <a href="https://travis-ci.org/">Travis</a> continuous integration service is strongly encouraged. </li>
 <li> (Recent) Linux, OS X, and Windows platforms must be fully supported. </li>
 <li> For packages with freely distributable binary dependencies, these
 should be installed automatically via <a href="https://github.com/loladiro/BinDeps.jl">BinDeps</a>.  Binaries should be available for both OS X and Windows users. (See the Julia <a href="https://github.com/staticfloat/Homebrew.jl">Homebrew</a> package for easy binary packaging on OS X. For Windows, many upstream libraries provide a pre-compiled DLL file.) </li>
