--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ that packages follow the following simple guidelines:</p>
 
 <ul>
 <li> Packages should have good documentation. </li>
-<li> Packages must have a basic suite of tests in a <pre>test</pre> subdirectory, ideally controlled by a master file <pre>test/runtests.jl</pre>. Unit testing and the use of the <a href="https://travis-ci.org/">Travis</a> continuous integration service is strongly encouraged. </li>
+<li> Packages must have a basic suite of tests in a <code>test</code> subdirectory, ideally controlled by a master file <code>test/runtests.jl</code>. Unit testing and the use of the <a href="https://travis-ci.org/">Travis</a> continuous integration service is strongly encouraged. </li>
 <li> (Recent) Linux, OS X, and Windows platforms must be fully supported. </li>
 <li> For packages with freely distributable binary dependencies, these
 should be installed automatically via <a href="https://github.com/loladiro/BinDeps.jl">BinDeps</a>.  Binaries should be available for both OS X and Windows users. (See the Julia <a href="https://github.com/staticfloat/Homebrew.jl">Homebrew</a> package for easy binary packaging on OS X. For Windows, many upstream libraries provide a pre-compiled DLL file.) </li>
