--- a/index.html
+++ b/index.html
@@ -193,6 +193,20 @@
         <td></td> <!-- MINLP -->
         <td></td> <!-- Other -->
       </tr>
+      
+      <tr>
+        <th><a href="http://ab-initio.mit.edu/nlopt">CPLEX</a></th>
+        <td><a href="https://github.com/JuliaOpt/CPLEX.jl">CPLEX.jl</a></td>
+        <td>&#10004;<small>1</small></td> <!-- JuMP -->
+        <td>&#10004;<small>1</small></td> <!-- LP -->
+        <td>&#10004;<small>1</small></td> <!-- MILP -->
+        <td>&#10004;<small>1</small></td> <!-- QCQP -->
+        <td>&#10004;<small>1</small></td> <!-- MIQCQP -->
+        <td></td> <!-- SDP -->
+        <td></td> <!-- NLP -->
+        <td></td> <!-- MINLP -->
+        <td>IP Callbacks</td> <!-- Other -->
+      </tr>
     </tbody>
   </table>
 
