--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       </tr>
       
       <tr>
-        <th><a href="http://ab-initio.mit.edu/nlopt">CPLEX</a></th>
+        <th><a href="http://www-01.ibm.com/software/commerce/optimization/cplex-optimizer/">CPLEX</a></th>
         <td><a href="https://github.com/JuliaOpt/CPLEX.jl">CPLEX.jl</a></td>
         <td>&#10004;</td> <!-- JuMP -->
         <td>&#10004;</td> <!-- LP -->
