update capabilities table

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
         <td>&#10004;</td> <!-- QCQP -->
         <td>&#10004;</td> <!-- MIQCQP -->
         <td>&#10004;<small>1</small></td> <!-- SDP -->
-        <td>&#10004;<small>1</small></td> <!-- NLP -->
+        <td>&#10004;</td> <!-- NLP -->
         <td>&#10004;<small>1</small></td> <!-- MINLP -->
         <td></td> <!-- Other -->
       </tr>
@@ -212,13 +212,13 @@
       <tr>
         <th><a href="http://ab-initio.mit.edu/nlopt">NLopt</a></th>
         <td><a href="https://github.com/JuliaOpt/NLopt.jl">NLopt.jl</a></td>
-        <td></td> <!-- JuMP -->
+        <td>&#10004;</td> <!-- JuMP -->
         <td>&#10004;<small>1</small></td> <!-- LP -->
         <td></td> <!-- MILP -->
         <td>&#10004;<small>1</small></td> <!-- QCQP -->
         <td></td> <!-- MIQCQP -->
         <td></td> <!-- SDP -->
-        <td>&#10004;<small>1</small></td> <!-- NLP -->
+        <td>&#10004;</td> <!-- NLP -->
         <td></td> <!-- MINLP -->
         <td></td> <!-- Other -->
       </tr>
