--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         <td>&#10004;</td> <!-- JuMP -->
         <td>&#10004;</td> <!-- LP -->
         <td></td> <!-- MILP -->
-        <td>&#10004;</td> <!-- QCQP -->
+        <td></td> <!-- QCQP -->
         <td></td> <!-- MIQCQP -->
         <td></td> <!-- SDP -->
         <td>&#10004;</td> <!-- NLP -->
@@ -213,9 +213,9 @@
         <th><a href="http://ab-initio.mit.edu/nlopt">NLopt</a></th>
         <td><a href="https://github.com/JuliaOpt/NLopt.jl">NLopt.jl</a></td>
         <td>&#10004;</td> <!-- JuMP -->
-        <td>&#10004;<small>1</small></td> <!-- LP -->
+        <td></td> <!-- LP -->
         <td></td> <!-- MILP -->
-        <td>&#10004;<small>1</small></td> <!-- QCQP -->
+        <td></td> <!-- QCQP -->
         <td></td> <!-- MIQCQP -->
         <td></td> <!-- SDP -->
         <td>&#10004;</td> <!-- NLP -->
