--- a/index.html
+++ b/index.html
@@ -196,6 +196,20 @@
       </tr>
       
       <tr>
+        <th><a href="http://www.ziena.com/knitro.htm">KNITRO</a></th>
+        <td><a href="https://github.com/JuliaOpt/KNITRO.jl/">KNITRO.jl</a></td>
+        <td>&#10004;</td> <!-- JuMP -->
+        <td>&#10004;<small>1</small></td> <!-- LP -->
+        <td></td> <!-- MILP -->
+        <td></td> <!-- QCQP -->
+        <td></td> <!-- MIQCQP -->
+        <td></td> <!-- SDP -->
+        <td>&#10004;</td> <!-- NLP -->
+        <td></td> <!-- MINLP -->
+        <td></td> <!-- Other -->
+      </tr>
+      
+      <tr>
         <th><a href="http://www.mosek.com/">Mosek</a></th>
         <td><a href="https://github.com/JuliaOpt/Mosek.jl">Mosek.jl</a></td>
         <td>&#10004;</td> <!-- JuMP -->
