--- a/index.html
+++ b/index.html
@@ -200,12 +200,12 @@
         <td><a href="https://github.com/JuliaOpt/KNITRO.jl/">KNITRO.jl</a></td>
         <td>&#10004;</td> <!-- JuMP -->
         <td>&#10004;<small>1</small></td> <!-- LP -->
-        <td></td> <!-- MILP -->
+        <td>&#10004;<small>1</small></td></td> <!-- MILP -->
         <td></td> <!-- QCQP -->
         <td></td> <!-- MIQCQP -->
         <td></td> <!-- SDP -->
         <td>&#10004;</td> <!-- NLP -->
-        <td></td> <!-- MINLP -->
+        <td>&#10004;<small>1</small></td></td> <!-- MINLP -->
         <td></td> <!-- Other -->
       </tr>
       
