SOCP now supported in JuMP using ECOS

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         <td>&#10004;</td> <!-- JuMP -->
         <td>&#10004;</td> <!-- LP -->
         <td></td> <!-- MILP -->
-        <td>&#10004;<small>1</small></td> <!-- QCQP -->
+        <td>&#10004;</td> <!-- QCQP -->
         <td></td> <!-- MIQCQP -->
         <td></td> <!-- SDP -->
         <td></td> <!-- NLP -->
