Fixing broken link to MathProgBase documentation

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <ul>
     <li><strong>JuMP</strong> - An algebraic modeling language for linear, quadratic, and nonlinear constrained optimization problems embedded in Julia. Generates models as quick as commercial modeling tools and supports advanced features like solver callbacks. (<a href="https://jump.readthedocs.org/en/latest/">Documentation</a>, <a href="https://github.com/JuliaOpt/JuMP.jl">GitHub</a>)</li>
     <li><strong>Optim.jl</strong> - Implementations of standard optimization algorithms in pure Julia for unconstrained or box constrained problems. (<a href="https://github.com/JuliaOpt/Optim.jl/blob/master/README.md">Documentation</a>, <a href="https://github.com/JuliaOpt/Optim.jl">GitHub</a>)</li>
-    <li><strong>MathProgBase</strong> - A standardized interface implemented by solvers that allows code to remain solver-agnostic. Used by JuMP and <a href="https://github.com/cvxgrp/Convex.jl">Convex.jl</a>. (<a href="http://mathprogbasejl.readthedocs.org/en/latest/mathprogbase.html">Documentation</a>, <a href="https://github.com/JuliaOpt/MathProgBase.jl">GitHub</a>)</li>
+    <li><strong>MathProgBase</strong> - A standardized interface implemented by solvers that allows code to remain solver-agnostic. Used by JuMP and <a href="https://github.com/cvxgrp/Convex.jl">Convex.jl</a>. (<a href="http://mathprogbasejl.readthedocs.org/en/latest/">Documentation</a>, <a href="https://github.com/JuliaOpt/MathProgBase.jl">GitHub</a>)</li>
   </ul>
 
   <p>We also have connections to many open-source and commercial solvers:</p>
