--- a/index.html
+++ b/index.html
@@ -118,15 +118,27 @@
           <a href="https://www.coin-or.org">COIN</a>
           <a href="https://projects.coin-or.org/Cbc">Cbc</a>
           <a href="https://github.com/JuliaOpt/Cbc.jl">(.jl)</a>
-          <br>
+        </th>
+
+        <td>&#10004;</td> <!-- LP -->
+        <td>&#10004;</td> <!-- MILP -->
+        <td></td> <!-- QCQP -->
+        <td></td> <!-- MIQCQP -->
+        <td></td> <!-- SDP -->
+        <td></td> <!-- NLP -->
+        <td></td> <!-- MINLP -->
+        <td></td> <!-- Other -->
+      </tr>
+
+      <tr>
+        <th>
           <a href="https://www.coin-or.org">COIN</a>
           <a href="https://projects.coin-or.org/Clp">Clp</a>
           <a href="https://github.com/JuliaOpt/Clp.jl">(.jl)</a>
         </th>
-        <!--<td><a href="https://github.com/JuliaOpt/Cbc.jl">Cbc.jl</a>/<a href="https://github.com/JuliaOpt/Clp.jl">Clp.jl</a></td>-->
 
         <td>&#10004;</td> <!-- LP -->
-        <td>&#10004;</td> <!-- MILP -->
+        <td></td> <!-- MILP -->
         <td></td> <!-- QCQP -->
         <td></td> <!-- MIQCQP -->
         <td></td> <!-- SDP -->
