--- a/index.html
+++ b/index.html
@@ -313,6 +313,22 @@
         <td></td> <!-- Other -->
       </tr>
       
+      <tr>
+        <th>
+          <a href="https://github.com/cvxgrp/scs">SCS</a>
+          <a href="https://github.com/JuliaOpt/SCS.jl">(.jl)</a>
+        </th>
+        <!--<td><a href="https://github.com/JuliaOpt/NLopt.jl">NLopt.jl</a></td>-->
+        <td>&#10004;</td> <!-- LP -->
+        <td></td> <!-- MILP -->
+        <td>&#10004;</td> <!-- QCQP -->
+        <td></td> <!-- MIQCQP -->
+        <td>&#10004;</td> <!-- SDP -->
+        <td></td> <!-- NLP -->
+        <td></td> <!-- MINLP -->
+        <td></td> <!-- Other -->
+      </tr>
+      
     </tbody>
   </table>
 
