mosek doesn't support MINLP

--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
         <td>&#10004;</td> <!-- MIQCQP -->
         <td>&#10004;</td> <!-- SDP -->
         <td>&#10004;<small>1</small></td> <!-- NLP -->
-        <td>&#10004;<small>1</small></td> <!-- MINLP -->
+        <td></td> <!-- MINLP -->
         <td></td> <!-- Other -->
       </tr>
 
