clarify that NLP solvers can handle QP

--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
 	  <ul style="list-style: none; margin-top: 5px; margin-bottom: 5px">
             <li style="margin: 0.1em 0;">LP = <a href="http://en.wikipedia.org/wiki/Linear_programming">Linear Programming</a></li>
             <li style="margin: 0.1em 0;">MILP = <a href="http://en.wikipedia.org/wiki/Integer_programming">Mixed Integer LP</a></li>
-            <li style="margin: 0.1em 0;">SOCP = <a href="http://en.wikipedia.org/wiki/Second_order_cone_programming">Second-order cone programming</a> (includes QP, QCQP)</li>
+            <li style="margin: 0.1em 0;">SOCP = <a href="http://en.wikipedia.org/wiki/Second_order_cone_programming">Second-order cone programming</a> (includes convex <a href="http://en.wikipedia.org/wiki/Quadratic_programming">QP</a>, <a href="http://en.wikipedia.org/wiki/Quadratically_constrained_quadratic_program">QCQP</a>)</li>
             <li style="margin: 0.1em 0;">MISOCP = Mixed Integer SOCP</li>
             <li style="margin: 0.1em 0;">SDP = <a href="http://en.wikipedia.org/wiki/Semidefinite_programming">Semidefinite Programming</a></li>
-            <li style="margin: 0.1em 0;">NLP = (constrained) <a href="http://en.wikipedia.org/wiki/Nonlinear_programming">Nonlinear Programming</a></li>
+            <li style="margin: 0.1em 0;">NLP = (constrained) <a href="http://en.wikipedia.org/wiki/Nonlinear_programming">Nonlinear Programming</a> (includes general <a href="http://en.wikipedia.org/wiki/Quadratic_programming">QP</a>, <a href="http://en.wikipedia.org/wiki/Quadratically_constrained_quadratic_program">QCQP</a>)</li>
             <li style="margin: 0.1em 0;">MINLP = Mixed Integer NLP</li>
           </ul>
           <strong>Notes:</strong>
