--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@ testing on various platforms and dealing with binary dependencies.</p>
     </div>
     <div class="sixteen columns">
       <hr />
-      <small>This website was made with <a href="http://www.getskeleton.com">Skeleton</a>. Something wrong? Submit <a href="https://github.com/JuliaOpt/juliaopt.org/issues">issue</a>. Contact: <a href="http://iaindunning.com">Iain Dunning</a> (idunning AT mit DOT edu, <a href="https://www.twitter.com/iaindunning">@iaindunning</a>), <a href="http://www.mit.edu/~mlubin/">Miles Lubin</a> (mlubin AT mit DOT edu). <a href="https://www.stickermule.com/marketplace/4071-juliaopt">JuliaOpt Stickers!</a></small>
+      <small>This website was made with <a href="http://www.getskeleton.com">Skeleton</a>. Something wrong? Submit <a href="https://github.com/JuliaOpt/juliaopt.org/issues">issue</a>. Contact: <a href="http://iaindunning.com">Iain Dunning</a> (idunning AT mit DOT edu, <a href="https://www.twitter.com/iaindunning">@iaindunning</a>), <a href="http://www.mit.edu/~mlubin/">Miles Lubin</a> (mlubin AT mit DOT edu). <a href="https://www.stickermule.com/marketplace/4071-juliaopt">Stickers!</a></small>
     </div>
   </div><!-- container -->
 
