--- a/notebooks/index.html
+++ b/notebooks/index.html
@@ -130,3 +130,34 @@
           </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
       </nav>
+  <div class="row">
+    <div class="col-md-12">
+      <h1>JuliaOpt Example Notebooks</h1>
+      <ul>
+
+<li><a href="Chiwei Yan - Cutting Stock.html">Chiwei Yan - Cutting Stock</a></li>
+<li><a href="DualNumbers.html">DualNumbers</a></li>
+<li><a href="Dvorkin - Power systems - Economic dispatch and Unit commitment.html">Dvorkin - Power systems - Economic dispatch and Unit commitment</a></li>
+<li><a href="JuMP-ChebyshevCenter.html">JuMP-ChebyshevCenter</a></li>
+<li><a href="JuMP-LazyL2Ball.html">JuMP-LazyL2Ball</a></li>
+<li><a href="JuMP-NetRevMgmt.html">JuMP-NetRevMgmt</a></li>
+<li><a href="JuMP-Rocket.html">JuMP-Rocket</a></li>
+<li><a href="JuMP-Sudoku.html">JuMP-Sudoku</a></li>
+<li><a href="Shuvomoy - Benders decomposition.html">Shuvomoy - Benders decomposition</a></li>
+<li><a href="Shuvomoy - Column generation.html">Shuvomoy - Column generation</a></li>
+<li><a href="Shuvomoy - Exploiting sparsity.html">Shuvomoy - Exploiting sparsity</a></li>
+<li><a href="Shuvomoy - Getting started with JuMP.html">Shuvomoy - Getting started with JuMP</a></li>
+      </ul>
+    </div>
+  </div>
+
+    </div> <!-- /container -->
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+    <!-- MathJax -->
+    <script src='https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML'></script>
+  </body>
+</html>
