Update header on notebooks

--- a/notebooks/_header.html
+++ b/notebooks/_header.html
@@ -16,7 +16,7 @@
     <!-- Additional styles -->
     <style>
       body {
-        padding-top: 60px;
+        padding-top: 20px;
         padding-bottom: 20px;
       }
     </style>
@@ -96,37 +96,14 @@
   <body>
     <div class="container">
 
+    <div class="row">
+      <div class="col-md-12 text-center">
+        <a href="/index.html"><img style="height: 12em; width:auto" src="/images/juliaopt.svg"></a>
+        <h1>JuliaOpt</h1>
+        <p>
+          Optimization packages for the <a href="http://julialang.org">Julia language.</a>
+        </p>
+      </div>
+    </div>
 
-      <!-- Static navbar -->
-      <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container-fluid">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="/index.html">JuliaOpt</a>
-          </div>
-          <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-              <li><a href="/index.html#about">About</a></li>
-              <li><a href="/index.html#packages">Packages</a></li>
-              <li><a href="/notebooks/index.html">Notebooks</a></li>
-              <!--<li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">JuMP <span class="caret"></span></a>
-                <ul class="dropdown-menu" role="menu">
-                  <li><a href="#">Action</a></li>
-                  <li><a href="#">Another action</a></li>
-                  <li><a href="#">Something else here</a></li>
-                  <li class="divider"></li>
-                  <li class="dropdown-header">Nav header</li>
-                  <li><a href="#">Separated link</a></li>
-                  <li><a href="#">One more separated link</a></li>
-                </ul>
-              </li>-->
-            </ul>
-          </div><!--/.nav-collapse -->
-        </div><!--/.container-fluid -->
-      </nav>
+    <hr>
