add CoinOptServices.jl to solver table

--- a/index.html
+++ b/index.html
@@ -477,6 +477,23 @@
       <td></td> <!-- Other -->
     </tr>
     
+    <tr>
+      <th>
+        <a href="https://www.coin-or.org">COIN</a>
+        <a href="https://projects.coin-or.org/OS">Optimization Services</a>
+        <a href="https://github.com/JuliaOpt/CoinOptServices.jl">(.jl)</a>
+      </th>
+
+      <td>&#10004;</td> <!-- LP -->
+      <td>&#10004;</td> <!-- MILP -->
+      <td>&#10004;</td> <!-- QCQP -->
+      <td>&#10004;</td> <!-- MIQCQP -->
+      <td></td> <!-- SDP -->
+      <td>&#10004;</td> <!-- NLP -->
+      <td>&#10004;</td> <!-- MINLP -->
+      <td></td> <!-- Other -->
+    </tr>
+    
   </tbody>
 </table>
 
